--- a/front-end/nestracking/src/app/header/header.component.html
+++ b/front-end/nestracking/src/app/header/header.component.html
@@ -1,3 +1,35 @@
-<p>
-  header works!
-</p>
+<ul class="navSide">
+  <li>
+    <a 
+    [routerLink]="['/index']" 
+    routerLinkActive="active"
+     >
+    
+     index </a> </li>
+
+  <li>
+    <a 
+    [routerLink]="['/searchbar']" 
+    routerLinkActive="active">
+    
+    searchbar</a></li>
+  <li>
+    <a 
+    [routerLink]="['/searchpage']" 
+    routerLinkActive="active">
+    
+    searchpage</a></li>
+  <li>
+    <a 
+    [routerLink]="['/product']" 
+    routerLinkActive="active">
+    
+    product</a> </li>
+  <li>
+    <a 
+    [routerLink]="['/contact']" 
+    routerLinkActive="active">
+    
+    contact</a> </li>
+  
+</ul>
