--- a/front-end/nestracking/src/app/header/header.component.scss
+++ b/front-end/nestracking/src/app/header/header.component.scss
@@ -1,5 +1,38 @@
-.navSide{
-    display: flex;
-    flex-direction: row;
-    justify-content:space-around;
+// .navSide{
+//     display: flex;
+//     flex-direction: row;
+//     justify-content:space-around;
+// }
+
+.appHeaderContent{
+    width: 100%;
+    height: 15em;
+    background-image: url("../../assets/public/images/paysage-plage.jpg") ;
+    background-repeat: no-repeat;
+    background-size:  100% ;
+    .navBar{
+        width: 100%;
+        height: 7em;
+        background-color: rgba(0, 0, 0, 0.6);
+        .logoContenair{
+            float: left;
+        }
+        .menuContent{
+            float: right;
+            height: 3em;
+            width: 4.5em;
+            margin-right: 1em;
+            // .loginLink{
+            //     display: block;
+            // }
+            .imgMenu.mat-button{
+                margin: 0 ;
+                padding: 0;
+                min-width: 50px !important;
+                float: right;
+                
+            }
+            
+        }
+    }
 }
