--- a/front-end/nestracking/src/app/header/header.component.scss
+++ b/front-end/nestracking/src/app/header/header.component.scss
@@ -1,20 +1,34 @@
-// .navSide{
-//     display: flex;
-//     flex-direction: row;
-//     justify-content:space-around;
-// }
+@import '../../mixins';
+@import '../../variables';
 
 .appHeaderContent{
     width: 100%;
-    height: 50vh;
+    height: 200px;
     background-image: url("../../assets/public/images/header.svg") ;
     background-repeat: no-repeat;
     background-size:  100% ;
+    @include breakpoint(screen, $iPadWidth){
+        width: 100%;
+        height: 460px;
+        background-image: url("../../assets/public/images/header.svg") ;
+        background-repeat: no-repeat;
+        background-size:  100% ;
+    }
+    
     .navBar{
         width: 100%;
-        height: 10vw;
-        min-height: 130px !important;
-        background-color: rgba(0, 0, 0, 0.6);
+        height: 75px;       
+        background-color: rgba(0, 0, 0, 0.3);
+        @include breakpoint(screen, $mobileWidth){
+            width: 100%;
+            height: 16vw;
+            background-color: rgba(0, 0, 0, 0.3);
+            @include breakpoint(screen, $iPadWidth){
+                width: 100%;
+                height: 160px;
+                background-color: rgba(0, 0, 0, 0.3);
+            }
+        }
         .logoContenair{
             float: left;
             padding-top:2vw;
@@ -28,7 +42,7 @@
             float: right;
             height: 100%;
             width: 30%;
-            min-width: 100px;
+            min-width: 110px;
             margin-right: 1em;
             text-align: right;
             padding-top: 1em;
@@ -50,3 +64,22 @@
         }
     }
 }
+.appHeaderContent::after{
+    margin-top: 5vh;
+    content:"";
+    display: block;
+    height: 140px;
+    width: 100%;
+    background: url(../../assets/public/images/shadow.png) repeat-x center top;
+    
+    @include breakpoint(screen, $iPadWidth){
+        margin-top: 220px;
+        content:"";
+        display: block;
+        height: 140px;
+        width: 100%;
+        background: url(../../assets/public/images/shadow.png) repeat-x center top;
+    }
+    
+ 
+ }
