--- a/front-end/nestracking/src/app/footer/footer.component.scss
+++ b/front-end/nestracking/src/app/footer/footer.component.scss
@@ -4,7 +4,7 @@
     background-color: #BEB09C;
     .imgMenu.mat-button{
         width:100%;
-        
+        background-color: #178887;
         margin: auto ;
         padding: auto;
         line-height: 0;            
@@ -14,6 +14,9 @@
         width: 10vw;
         height:5vh;
         float: right;
+    }
+    .mat-menu-content{
+        background-color: #178887;
     }
 };
 .newsletter{
