--- a/front-end/nestracking/src/app/header/header.component.html
+++ b/front-end/nestracking/src/app/header/header.component.html
@@ -1,19 +1,24 @@
 <div class="appHeaderContent">
 
   <div class="navBar">
+<!-- LOGO NESTRACKING -->
     <div class="logoContenair">
      <a [routerLink]="['/index']" 
      routerLinkActive="active">
       <img class="imgLogoIcon" src="../../assets/public/images/a.svg"  alt="logosite">
     </a>
     </div>
+<!-- CONTIENT LE LOGO LOGIN ET MENU -->
     <div class="menuContent">
-        <a class="loginLink" [routerLink]="['/index']" 
-        routerLinkActive="active"><img class="imgLogin" src="../../assets/public/images/login.icon.svg"  alt=""></a>
+      <!-- LOGIN LOGO -->
+      <a class="loginLink" [routerLink]="['/index']" 
+        routerLinkActive="active">
+        <img class="imgLogin" src="../../assets/public/images/login.icon.svg"  alt="">
+      </a>
       
-      
+      <!-- MENU LOGO -->
       <button mat-button [matMenuTriggerFor]="menu" class="imgMenu"> 
-        <img class="imgMenuIcon" src="../../assets/public/images/menu-options.svg"  alt="" >
+        <img class="imgMenuIcon" src="../../assets/public/images/menu.svg"  alt="" >
       </button>
         <mat-menu #menu="matMenu">
           
@@ -33,7 +38,19 @@
             Contact</a></button>
           
         </mat-menu>
-     
+      <div class="navMenu">
+        <ul>
+          <li><a [routerLink]="['/index']" 
+            routerLinkActive="active">
+            Accueil</a></li>
+          <li><a [routerLink]="['/searchpage']" 
+            routerLinkActive="active">
+            Recherche</a></li>
+          <li><a [routerLink]="['/contact']" 
+            routerLinkActive="active">
+            Contact</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
