flo header almost ending

--- a/front-end/nestracking/src/app/header/header.component.html
+++ b/front-end/nestracking/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     <div class="logoContenair">
      <a [routerLink]="['/index']" 
      routerLinkActive="active">
-      <img class="imgLogoIcon" src="../../assets/public/images/a.svg"  alt="logosite">
+      <img class="imgLogoIcon" src="../../assets/public/images/a copie.svg"  alt="logosite">
     </a>
     </div>
 <!-- CONTIENT LE LOGO LOGIN ET MENU -->
@@ -21,7 +21,7 @@
         <img class="imgMenuIcon" src="../../assets/public/images/menu.svg"  alt="" >
       </button>
         <mat-menu #menu="matMenu">
-          
+            
           <button mat-menu-item>
             <a [routerLink]="['/index']" 
             routerLinkActive="active">
@@ -31,95 +31,28 @@
             <a [routerLink]="['/searchpage']" 
             routerLinkActive="active">
             Recherche</a></button>
-
           <button mat-menu-item>
             <a [routerLink]="['/contact']" 
-            routerLinkActive="active">
-            Contact</a></button>
+             routerLinkActive="active">
+             Contact</a></button>
+         
           
         </mat-menu>
       <div class="navMenu">
         <ul>
-          <li><a [routerLink]="['/index']" 
-            routerLinkActive="active">
-            Accueil</a></li>
+          <li><a [routerLink]="['/contact']" 
+             routerLinkActive="active">
+             Contact</a></li>
+          
           <li><a [routerLink]="['/searchpage']" 
             routerLinkActive="active">
             Recherche</a></li>
-          <li><a [routerLink]="['/contact']" 
+          <li><a [routerLink]="['/index']" 
             routerLinkActive="active">
-            Contact</a></li>
+            Accueil</a></li>
+           
         </ul>
       </div>
     </div>
   </div>
 </div>
-<!-- <ul class="navSide">
-  <li>
-    <a 
-    [routerLink]="['/index']" 
-    routterLink]="['/searchpage']" 
-    routerLinkActive="active">
-    
-    searchpage</a></li>
-  <li>
-    <a 
-    [routerLink]="['/product']" 
-    routerLinkActive="active">
-    
-    product</a> </li>
-  <li>
-    <a 
-    [routerLink]="['/contact']" 
-    routerLinkActive="active">
-    
-    contact</a> </li>
-  
-</ul>erLinkActive="active"
-     >
-    
-     index </a> </li>
-
-  <li>
-    <a terLink]="['/searchpage']" 
-    routerLinkActive="active">
-    
-    searchpage</a></li>
-  <li>
-    <a 
-    [routerLink]="['/product']" 
-    routerLinkActive="active">
-    
-    product</a> </li>
-  <li>
-    <a 
-    [routerLink]="['/contact']" 
-    routerLinkActive="active">
-    
-    contact</a> </li>
-  
-</ul>
-    [routerLink]="['/searchbar']" 
-    routerLinkActive="active">
-    
-    searchbar</a></li>
-  <li>
-    <a 
-    [routerLink]="['/searchpage']" 
-    routerLinkActive="active">
-    
-    searchpage</a></li>
-  <li>
-    <a 
-    [routerLink]="['/product']" 
-    routerLinkActive="active">
-    
-    product</a> </li>
-  <li>
-    <a 
-    [routerLink]="['/contact']" 
-    routerLinkActive="active">
-    
-    contact</a> </li>
-  
-</ul> -->
