--- a/front-end/nestracking/src/app/header/header.component.scss
+++ b/front-end/nestracking/src/app/header/header.component.scss
@@ -31,11 +31,18 @@
         }
         .logoContenair{
             float: left;
+            top:-10px;
+            @include breakpoint(screen, $iPadWidth){
             padding-top:2vw;
             padding-left: 2vw;
+            }
             .imgLogoIcon{
-                height:12vh;
-                width: 32vw;
+                height: 50px;
+                width: 80px;
+                @include breakpoint(screen, $iPadWidth){
+                  height:12vh;
+                  width: 32vw
+                }
             }
         }
         .menuContent{
@@ -43,9 +50,11 @@
             height: 100%;
             width: 40%;
             min-width: 110px;
-            margin-right: 1em;
-            text-align: right;
-            padding-top: 1em;
+            text-align: right;            
+            @include breakpoint (screen, $iPadWidth){
+                padding-top: 1em;
+                margin-right: 1em;
+            }
             .navMenu{
                 visibility: hidden;
                 ul{
@@ -57,24 +66,37 @@
                           color: white;
                         }
                     }
-                    
                 }
                 @include breakpoint (screen, $iPadWidth){
                     visibility: visible;
                 }
             }
             .imgLogin{
-                width: 5vw;
-                height:5vh;
+                width: 22px;
+                height: 55px;
+                @include breakpoint (screen, $iPadWidth){
+                    width: 5vw;
+                    height:5vh;
+                }
+
             }
             .imgMenu.mat-button{
+                min-width: 60px;
                 margin: 0 ;
                 padding: 0;
                 line-height: 0;            
                 float: right; 
+                @include breakpoint (screen, $iPadWidth){
+                    visibility: hidden;
+                    display: none;
+                }
                 .imgMenuIcon{
-                    width: 10vw;
-                    height:5vh;
+                    width: 25px;
+                    height: 50px;
+                    @include breakpoint (screen, $iPadWidth){
+                        width: 10vw;
+                        height:5vh;
+                    }
                 }
             }
             
