--- a/front-end/nestracking/src/app/footer/footer.component.scss
+++ b/front-end/nestracking/src/app/footer/footer.component.scss
@@ -1,6 +1,6 @@
 
 .footer{
-    color:#fff;
+    color:#616161;
     background-color: #BEB09C;
     .imgMenu.mat-button{
         width:100%;
@@ -15,7 +15,9 @@
         height:5vh;
         float: right;
     }
-    
+    .menu-horiz{
+        visibility: hidden;
+    }
 };
 .newsletter{
     text-align: center;
@@ -33,6 +35,10 @@
 .formulaire{
     display: flex;
     justify-content: center;
+    .champ{
+        border-radius: 30px;
+        width: 250px;
+    }
     
 }
 .texte{
@@ -48,4 +54,83 @@ padding:1rem;
         padding-right: 0.5rem;
         padding-bottom: 0.3rem;
     }
+    
 }
+
+@media only screen and (min-width: 641px){
+    .footer{
+    .menu-horiz{
+        visibility: visible;
+        ul{
+            display: flex;
+            justify-content: center;
+            margin:30px 10px;
+            
+        }
+        li{
+            list-style: none;
+            margin:0 10px;
+        }
+        a{
+            color:#616161;
+        }
+    }
+
+    .imgMenuIcon{
+        visibility: hidden;
+    }
+    .container{
+        position: relative;
+        display: flex;
+        .texte{
+            max-width: 300px;
+            margin-left: 50px;
+            width: 40%;
+        }
+        .newsletter{
+            position: absolute;
+            right:0;
+            bottom: 0;
+            width: 45%;
+            padding-right: 20px;
+           
+        }    
+    }
+}
+};
+
+
+@media only screen and (min-width: 1024px){
+    .footer{
+        .menu-horiz{
+            visibility: visible;
+            ul{
+                display: flex;
+                justify-content: center;
+                margin:30px 10px;
+                
+            }
+            li{
+                list-style: none;
+                margin:0 30px;
+            }
+            a{
+                color:#616161;
+            }
+        }
+    
+        .imgMenuIcon{
+            visibility: hidden;
+        }
+        .container{
+            display: flex;
+            .texte{
+                max-width: 500px;
+                margin-left: 80px;
+            }
+            .newsletter{
+            //    position: relative ;top:70%;left:60%;
+            }
+        }
+    }
+};
