--- a/front-end/nestracking/src/app/contact/contact.component.html
+++ b/front-end/nestracking/src/app/contact/contact.component.html
@@ -1,45 +1,47 @@
-
 <div class="componentContent">
 
   <section class="formContainer">
-    Formulaire de contact
+
   </section>
   <section class="sectionForm">
-<form [formGroup]="userForm" (submit)="SendMail(userForm.value)">
-  <section >
-    <mat-form-field >
-      <input  matInput placeholder="name" 
-      formControlName="name">
-      <mat-error *ngIf="userForm.controls.name.invalid">{{getErrorMessage('name')}}</mat-error>
-    </mat-form-field>
-  </section>
-  <section>
-    <mat-form-field>
-      <input  matInput placeholder="email" 
-      formControlName="email">
-      <mat-error *ngIf="userForm.controls.email.invalid">{{getErrorMessage('email')}}</mat-error>
-    </mat-form-field>
+    <form [formGroup]="userForm" (submit)="SendMail(userForm.value)">
+      <section>
+        <mat-form-field appearance="outline">
+          <input matInput placeholder="Name" formControlName="name">
+          <mat-error *ngIf="userForm.controls.name.invalid">{{getErrorMessage('name')}}</mat-error>
+        </mat-form-field>
+      </section>
+      <section>
+        <mat-form-field appearance="outline">
+          <input matInput placeholder="Email Address" formControlName="email">
+          <mat-error *ngIf="userForm.controls.email.invalid">{{getErrorMessage('email')}}</mat-error>
+        </mat-form-field>
+      </section>
+
+      <section>
+        <mat-form-field appearance="outline">
+          <input matInput placeholder="Object" formControlName="Object">
+          <mat-error *ngIf="userForm.controls.Object.invalid">{{getErrorMessage('Object')}}</mat-error>
+        </mat-form-field>
+      </section>
+
+
+      <section>
+        <textarea matInput class="msgspace" placeholder="Type your message here..." formControlName="message" class="text"></textarea>
+
+
+
+
+      </section>
+
+
+
+    </form>
   </section>
 
-  <section>
-    <mat-form-field>
-      <input  matInput placeholder="Object" 
-      formControlName="Object">
-      <mat-error *ngIf="userForm.controls.Object.invalid">{{getErrorMessage('Object')}}</mat-error>
-    </mat-form-field>
-  </section>
-
-  <section>
-    <mat-form-field>
-    <input  matInput placeholder="message" 
-    formControlName="message">
-    <mat-error *ngIf="userForm.controls.message.invalid">{{getErrorMessage('message')}}</mat-error>
-    </mat-form-field>
-  </section>
-  
-
-  <button mat-raised-button  color="primary" [disabled]="!userForm.valid">Send</button>
-</form>
-</section>
+  <div class="bout">
+    <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter">
+    <label for="subscribeNews">Yes i want to receive the newsletter from Nestracking</label>
+  </div>
+  <button mat-raised-button color="primary" [disabled]="!userForm.valid">Send</button>
 </div>
-
