--- a/front-end/nestracking/src/app/destination/destination.component.html
+++ b/front-end/nestracking/src/app/destination/destination.component.html
@@ -1,3 +1,32 @@
-<p>
-  destination works!
-</p>
+<div class="searchBarContainer">
+  <!-- BARRE DE RECHERCHE -->
+  <div class="searchBar">
+    <!-- LE GRID -->
+    <div class="gridContainer">
+      <!-- LA VILLE -->
+      <div class="item1Country">
+        <label for="country"></label>
+        <input type="text" name='country'placeholder="Pays">
+      </div>
+      <!-- NOMBRE DE PERSONNE-->
+      <div class="item2Number">
+        <label for="number"></label>
+        <input type="text" name='number'placeholder="Nombres de personnes">
+      </div>
+      <!-- DATE DEPART -->
+      <div class="item3DateGo">
+        <label for="datego"></label>
+        <input type="text" name='datego'placeholder="Date de départ">
+      </div>
+      <!--  -->
+      <div class="item4DateBack">
+        <label for="dateback"></label>
+        <input type="text" name='dateback'placeholder="Date de retour">
+      </div>
+      <div class="item5SubmitBtn">
+        <button >send</button>
+      </div>
+  
+    </div>
+  </div>
+</div>
