--- a/front-end/nestracking/src/app/footer/footer.component.html
+++ b/front-end/nestracking/src/app/footer/footer.component.html
@@ -41,7 +41,7 @@
           About us</a></li>
       <li><a [routerLink]="['/conditions']" routerLinkActive="active">
           Conditions</a></li>
-      <li><a [routerLink]="['/contact']" routerLinkActive="active">
+      <li><a [routerLink]="['/contact']" routerLinkActive="active" target="_blank">
           Contact</a></li>
       <li><a [routerLink]="['/sitemap']" routerLinkActive="active">
           Sitemap</a></li>
