flo update destination responsive

--- a/front-end/nestracking/src/app/destination/destination.component.html
+++ b/front-end/nestracking/src/app/destination/destination.component.html
@@ -15,18 +15,66 @@
       </div>
       <!-- DATE DEPART -->
       <div class="item3DateGo">
-        <label for="datego"></label>
-        <input type="text" name='datego'placeholder="Date de départ">
+        <button>Date de départ</button>
       </div>
-      <!--  -->
+      <!-- DATE DE RETOUR -->
       <div class="item4DateBack">
-        <label for="dateback"></label>
-        <input type="text" name='dateback'placeholder="Date de retour">
+        <button >Date de retour</button>
       </div>
+      <!-- BOUTON SUBMIT -->
       <div class="item5SubmitBtn">
-        <button >send</button>
+        <button >SUBMIT</button>
       </div>
   
+    </div>
+  </div>
+</div>
+
+<!-- MAIN:  -->
+<div class="destinationContainer">
+
+  <!-- THEMES: -->
+  <div class="themeTitle">
+    <h1>Thèmes</h1>
+  </div>
+  <!-- BOX -->
+  <div class="themesFlexBox">
+    <!-- THEME 1 -->
+    <div class="theme1">
+      <img src="http://placeimg.com/192/108/any" alt="">
+      <h3>Title</h3>
+    </div>
+    <!-- THEME 2 -->
+    <div class="theme2">
+      <img src="http://placeimg.com/192/108/any" alt="">
+      <h3>Title</h3>
+    </div>
+    <!-- THEME 3 -->
+    <div class="theme3">
+      <img src="http://placeimg.com/192/108/any" alt="">
+      <h3>Title</h3>
+    </div>
+    <!-- THEME 4 -->
+    <div class="theme4">
+      <img src="http://placeimg.com/192/108/any" alt="">
+      <h3>Title</h3>
+    </div>
+  </div>
+
+  <!-- DESTINATIONS DU MOMENT  -->
+  <div class="bestPlacesTitle">
+    <h1>Destinations du moment</h1>
+  </div>
+  <div class="bestPlacesFlexBox">
+    <!-- + RESERVÉE -->
+    <div class="mostReserve">
+        <img src="http://placeimg.com/256/144/any" alt="">
+        <h3>Les plus réservées</h3>
+    </div>
+    <!-- + VUES -->
+    <div class="mostViews">
+        <img src="http://placeimg.com/256/144/any" alt="">
+        <h3>Les plus vues</h3>
     </div>
   </div>
 </div>
