--- a/front-end/nestracking/src/app/searchpage/searchpage.component.scss
+++ b/front-end/nestracking/src/app/searchpage/searchpage.component.scss
@@ -1,9 +1,16 @@
 li{
-    list-style-type: none;     
+    list-style-type: none;   
+    display: flex;
+    justify-content: center;
 }
 
 ul{
     padding: 0px;
+    margin : 0px;
+    display: flex;
+    align-content: center;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 #Tri{
@@ -16,7 +23,14 @@ background-color: #3ab3b0;
 border-radius: 50px 50px 0px 0px;
 display: flex;
 align-content: center;
+flex-direction: column;
 justify-content: center;
+font-size: 35px;
+}
+
+#Tri p{
+    padding: 0; 
+    margin : 0;     
 }
 
 .DownSideSearch{
@@ -33,8 +47,21 @@ margin-right: auto;
 width: 30%;
 background-color: grey;
 height: 800px;
+display: grid;
+padding: 2%;
+grid-template-columns: 40% 55%;
+grid-template-rows: 100px 100px 100px 100px 100px 100px;
 }
 
+.OneFilter{
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+Label{
+    font-size: 25px;
+    height: 50px;
+}
 .SearchResult{
 width: 65%;
 height: 800px;
@@ -43,21 +70,33 @@ height: 800px;
 .TriOption{
     cursor: pointer;
     float:left;
-    width: 100px;
-    height: 35px;  
-    display: flex;
-    justify-content: center;
+    width: 200px;
+    height: 50px;  
     color: white;
 }
 
 
 .ArrowSelect{
-width: 10px;
-height:10px;
-margin-top: 21%;
+width: 35px;
+height:35px;
+margin-top: 0%;
 margin-left: 10px;
+align-self: center;
 }
 
 .selected{
 color:#ffcc66; 
+}
+
+.Star{
+    display: inline-block;
+width: 25px;
+height: 25px;
+background-image: url('../../assets/public/images/EmptyStar.png');
+background-size: contain;
+margin-right: 10px;
+}
+
+.FullStar{
+    background-image: url('../../assets/public/images/FullStar.png')
 }
