flo update accueil page

--- a/front-end/nestracking/src/app/index/index.component.html
+++ b/front-end/nestracking/src/app/index/index.component.html
@@ -1,3 +1,86 @@
-<p>
-  index works!
-</p>
+<div class="searchBarContainer">
+    <!-- BARRE DE RECHERCHE -->
+    <div class="searchBar">
+      <!-- LE GRID -->
+      <div class="gridContainer">
+        <!-- LA VILLE -->
+        <div class="item1Country">
+          <label for="country"></label>
+          <input type="text" name='country'placeholder="Pays">
+        </div>
+        <!-- NOMBRE DE PERSONNE-->
+        <div class="item2Number">
+          <label for="number"></label>
+          <input type="text" name='number'placeholder="Nombres de personnes">
+        </div>
+        <!-- DATE DEPART -->
+        <div class="item3DateGo">
+          <button>Date de départ</button>
+        </div>
+        <!-- DATE DE RETOUR -->
+        <div class="item4DateBack">
+          <button >Date de retour</button>
+        </div>
+        <!-- BOUTON SUBMIT -->
+        <div class="item5SubmitBtn">
+          <button >SUBMIT</button>
+        </div>
+    
+      </div>
+    </div>
+  </div>
+  
+  <!-- MAIN:  -->
+  <div class="destinationContainer">
+  
+    <!-- THEMES: -->
+    <div class="themeTitle">
+      <h1>Thèmes</h1>
+    </div>
+    <!-- BOX -->
+    <div class="themesFlexBox">
+      <div class="themesFlexBox1">
+        <!-- THEME 1 -->
+        <div class="theme1">
+          <img src="http://placeimg.com/192/108/any" alt="">
+          <h3>Title</h3>
+        </div>
+        <!-- THEME 2 -->
+        <div class="theme2">
+          <img src="http://placeimg.com/192/108/any" alt="">
+          <h3>Title</h3>
+        </div>
+      </div>
+
+      <div class="themesFlexBox2">
+        <!-- THEME 3 -->
+        <div class="theme3">
+          <img src="http://placeimg.com/192/108/any" alt="">
+          <h3>Title</h3>
+        </div>
+        <!-- THEME 4 -->
+        <div class="theme4">
+          <img src="http://placeimg.com/192/108/any" alt="">
+          <h3>Title</h3>
+        </div>
+      </div>
+      
+    </div>
+  
+    <!-- DESTINATIONS DU MOMENT  -->
+    <div class="bestPlacesTitle">
+      <h1>Destinations du moment</h1>
+    </div>
+    <div class="bestPlacesFlexBox">
+      <!-- + RESERVÉE -->
+      <div class="mostReserve">
+          <img src="http://placeimg.com/256/144/any" alt="">
+          <h3>Les plus réservées</h3>
+      </div>
+      <!-- + VUES -->
+      <div class="mostViews">
+          <img src="http://placeimg.com/256/144/any" alt="">
+          <h3>Les plus vues</h3>
+      </div>
+    </div>
+  </div>
