--- a/front-end/nestracking/src/app/searchpage/searchpage.component.html
+++ b/front-end/nestracking/src/app/searchpage/searchpage.component.html
@@ -1,6 +1,6 @@
 <div id="Tri">
     <ul>
-        <li class="TriOption" *ngFor="let Criteria of TriCriteria" (click)="Tri(Criteria.Criteria)" [ngClass]="{selected: SelectedTriCriteria === Criteria.Criteria }">
+        <li class="TriOption" *ngFor="let Criteria of TriCriteria" (click)="Tri(Criteria.Criteria, Criteria.ARROW.Value)" [ngClass]="{selected: SelectedTriCriteria === Criteria.Criteria }">
             <p>{{Criteria.Criteria}}</p><img class="ArrowSelect" src="{{Criteria.ARROW.URL}}">
         </li>
     </ul>
