--- a/front-end/nestracking/src/app/index/index.component.html
+++ b/front-end/nestracking/src/app/index/index.component.html
@@ -8,11 +8,7 @@
           <label for="country"></label>
           <input type="text" name='country'placeholder="Pays">
         </div>
-        <!-- NOMBRE DE PERSONNE-->
-        <div class="item2Number">
-          <label for="number"></label>
-          <input type="text" name='number'placeholder="Nombres de personnes">
-        </div>
+        
         <!-- DATE DEPART -->
         <div class="item3DateGo">
           <button>Date de départ</button>
@@ -20,6 +16,11 @@
         <!-- DATE DE RETOUR -->
         <div class="item4DateBack">
           <button >Date de retour</button>
+        </div>
+        <!-- NOMBRE DE PERSONNE-->
+        <div class="item2Number">
+          <label for="number"></label>
+          <input type="text" name='number'placeholder="Nombres de personnes">
         </div>
         <!-- BOUTON SUBMIT -->
         <div class="item5SubmitBtn">
@@ -39,31 +40,35 @@
     </div>
     <!-- BOX -->
     <div class="themesFlexBox">
-      <div class="themesFlexBox1">
+      <!-- <div class="themesFlexBox1"> -->
         <!-- THEME 1 -->
         <div class="theme1">
           <img src="http://placeimg.com/192/108/any" alt="">
+          <!-- <img src="http://placeimg.com/300/160/any" alt=""> -->
           <h3>Title</h3>
         </div>
         <!-- THEME 2 -->
         <div class="theme2">
           <img src="http://placeimg.com/192/108/any" alt="">
+          <!-- <img src="http://placeimg.com/300/160/any" alt=""> -->
           <h3>Title</h3>
         </div>
-      </div>
+      <!-- </div> -->
 
-      <div class="themesFlexBox2">
+      <!-- <div class="themesFlexBox2"> -->
         <!-- THEME 3 -->
         <div class="theme3">
           <img src="http://placeimg.com/192/108/any" alt="">
+          <!-- <img src="http://placeimg.com/300/160/any" alt=""> -->
           <h3>Title</h3>
         </div>
         <!-- THEME 4 -->
         <div class="theme4">
           <img src="http://placeimg.com/192/108/any" alt="">
+          <!-- <img src="http://placeimg.com/300/160/any" alt=""> -->
           <h3>Title</h3>
         </div>
-      </div>
+      <!-- </div> -->
       
     </div>
   
