--- a/front-end/nestracking/src/app/contact/contact.component.scss
+++ b/front-end/nestracking/src/app/contact/contact.component.scss
@@ -1,3 +1,5 @@
+@import '../../mixins';
+@import '../../variables';
 .mat-raised-button.mat-primary {
     color: white;
     size: 300ch;
@@ -5,10 +7,10 @@
 };
 
 .componentContent {
-
-margin-left: 200px;
-margin-top: 60px;
-
+    @include breakpoint(screen,$iPadWidth){
+        margin-left: 200px;
+        margin-top: 60px;
+    }
 };
 
 
