--- a/front-end/nestracking/src/app/searchpage/searchpage.component.html
+++ b/front-end/nestracking/src/app/searchpage/searchpage.component.html
@@ -49,13 +49,26 @@
                 <p>Click to delete one theme</p>
                 <p></p>
                 <!-- On fera un *For pour l'affichage des themes-->
+</div>
+                <label>Number of Chamber</label>
+                <div class="OneFilter">
+                    <input type="number" name="Chamber" value="Chamber" (keyup)="onKey($event,'Chamber')">
+                </div>
+<label>Departure</label>
+                <mat-form-field class="OneFilter">
+                        <input matInput [matDatepicker]="picker" placeholder="Departure ate"
+                               (dateInput)="addEvent('input', $event)" (dateChange)="Date('Start', $event)">
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                  </mat-form-field>
 
-        </div>
-
-
-
-
-
+                  <label>End</label>
+                  <mat-form-field class="OneFilter">
+                    <input matInput [matDatepicker]="Return" placeholder="End"
+                           (dateInput)="addEvent('input', $event)" (dateChange)="Date('End', $event)">
+                    <mat-datepicker-toggle matSuffix [for]="Return"></mat-datepicker-toggle>
+                    <mat-datepicker #Return></mat-datepicker>
+              </mat-form-field>
 
 
 
