--- a/front-end/nestracking/src/app/searchpage/searchpage.component.scss
+++ b/front-end/nestracking/src/app/searchpage/searchpage.component.scss
@@ -13,6 +13,12 @@ ul{
     margin-left: auto;
 }
 
+input{
+background-color: white;    
+}
+.mat-form-field-infix{
+background-color:white;
+}
 #Tri{
 width: 90%;
 margin-top: 10px;
@@ -46,11 +52,12 @@ margin-right: auto;
 #Filter{
 width: 30%;
 background-color: grey;
-height: 800px;
+height: 950px;
 display: grid;
 padding: 2%;
 grid-template-columns: 40% 55%;
-grid-template-rows: 100px 100px 100px 100px 100px 100px;
+grid-template-rows: 100px 100px 100px 100px 100px 100px 100px 100px 100px;
+align-items:center;
 }
 
 .OneFilter{
