flo add img accueil DB

--- a/front-end/nestracking/src/app/index/index.component.html
+++ b/front-end/nestracking/src/app/index/index.component.html
@@ -43,30 +43,26 @@
       <!-- <div class="themesFlexBox1"> -->
         <!-- THEME 1 -->
         <div class="theme1">
-          <img src="http://placeimg.com/192/108/any" alt="">
-          <!-- <img src="http://placeimg.com/300/160/any" alt=""> -->
-          <h3>Title</h3>
+          <img src="{{themes.summer}}" alt="" width="192" height="108">
+          <h3>Summer</h3>
         </div>
         <!-- THEME 2 -->
         <div class="theme2">
-          <img src="http://placeimg.com/192/108/any" alt="">
-          <!-- <img src="http://placeimg.com/300/160/any" alt=""> -->
-          <h3>Title</h3>
+          <img src="{{themes.love}}" alt="" width="192" height="108">
+          <h3>Love</h3>
         </div>
       <!-- </div> -->
 
       <!-- <div class="themesFlexBox2"> -->
         <!-- THEME 3 -->
         <div class="theme3">
-          <img src="http://placeimg.com/192/108/any" alt="">
-          <!-- <img src="http://placeimg.com/300/160/any" alt=""> -->
-          <h3>Title</h3>
+          <img src="{{themes.history}}" alt="" width="192" height="108">
+          <h3>History</h3>
         </div>
         <!-- THEME 4 -->
         <div class="theme4">
-          <img src="http://placeimg.com/192/108/any" alt="">
-          <!-- <img src="http://placeimg.com/300/160/any" alt=""> -->
-          <h3>Title</h3>
+          <img src="{{themes.last}}" alt="" width="192" height="108">
+          <h3>Last</h3>
         </div>
       <!-- </div> -->
       
@@ -79,12 +75,13 @@
     <div class="bestPlacesFlexBox">
       <!-- + RESERVÉE -->
       <div class="mostReserve">
-          <img src="http://placeimg.com/256/144/any" alt="">
+          
+          <img src="{{moments.Views}}" alt="" width="256" height="144">
           <h3>Les plus réservées</h3>
       </div>
       <!-- + VUES -->
       <div class="mostViews">
-          <img src="http://placeimg.com/256/144/any" alt="">
+        <img src="{{moments.Sell}}" alt="" width="256" height="144">>
           <h3>Les plus vues</h3>
       </div>
     </div>
